syntax = "proto3";

option java_package = "ua.nedz.grpc";
option java_outer_classname = "ScoreServiceProto";
option objc_class_prefix = "SSP";

package deathstar;

import "google/protobuf/empty.proto";

service ScoreService {
    rpc Scores(google.protobuf.Empty) returns (stream ScoresResponse) {}
    rpc AddScore(AddScoreRequest) returns (google.protobuf.Empty) {}
}

message ScoresResponse {
    repeated Score scores = 1;
}

message Score {
    string userName = 1;
    int64 score = 2;
}

message AddScoreRequest {
    string userName = 1;
    int64 toAdd = 2;
}